# lego-case

./: .gitignore  .gitmodules  BRANCH_PROTECTION.md  QUICK_START.md  README.md  deploy-all.sh  main.py  pyproject.toml  question_answer.py
.githooks/: install.sh  pre-commit
.github/: CICD_SETUP.md
.github/workflows/: deploy-app.yml  deploy-main.yml  jekyll-gh-pages.yml  terraform-apply.yml  terraform-plan.yml
backend/: .dockerignore  CONFIG.md  Dockerfile  REFACTORING_SUMMARY.md  __init__.py  app.py  config.py  deploy.sh  prompts.py  pyproject.toml  pytest.ini  schemas.py
backend-logs/LogFiles/: __lastCheckTime.txt
backend-logs/LogFiles/kudu/trace/: 0beaa0b8b094-f5c6bf08-42fe-4f2d-b3a5-5779684322aa.txt  0dc90cf640dd-a59aea33-866d-4248-9933-fc06481a5187.txt  10914a7a5a24-f597b6b9-d5d1-4dc7-91f1-f7ed3220bb60.txt  (+71 more)
backend/routers/: chat.py  multimodal.py  router.py
backend/tests/: README.md  __init__.py  conftest.py  test_multimodal.py  test_router.py
docs/: _config.yml  architecture.md  functional-requirements.md  index.md  non-functional-requirements.md  overview.md
docs/_layouts/: default.html
docs/assets/css/: mermaid-custom.css
frontend/: Dockerfile  README.md  deploy.sh  index.html
frontend/public/: config.js
frontend/src/: App.css  App.tsx  config.ts
frontend/src/components/: ChatArea.tsx  InputArea.tsx  index.ts
frontend/src/hooks/: useImageQuestion.ts
frontend/src/types/: index.ts
terraform/: BACKEND.md  main.tf  main.tfplan  outputs.tf  providers.tf  setup-backend.sh  setup-vars.sh  terraform.tfvars.example  tfplan  variables.tf
